fix erros no Stream

--- a/app/src/main/res/drawable/sony.xml
+++ b/app/src/main/res/drawable/sony.xml
@@ -1,84 +1,70 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="114dp"
     android:height="59dp"
     android:viewportWidth="114"
-    android:viewportHeight="59">
-  <path
-      android:pathData="M7,1L105,1A6,6 0,0 1,111 7L111,50A6,6 0,0 1,105 56L7,56A6,6 0,0 1,1 50L1,7A6,6 0,0 1,7 1z"
-      android:fillColor="#002"/>
-  <path
-      android:pathData="M17.1,19.13a0.57,0.57 0,0 1,0.33 0.06,7.45 7.45,0 0,0 -0.89,3.63h0.51a6.82,6.82 0,0 1,0.79 -3.33,6.77 6.77,0 0,1 1.25,3.33h0.51a7.33,7.33 0,0 0,-1.39 -3.68,0.82 0.82,0 0,1 0.36,-0.1 0.88,0.88 0,0 1,0.67 0.35,7.23 7.23,0 0,1 1.15,3.43h0.51a8,8 0,0 0,-1.12 -3.56,1.53 1.53,0 0,0 -1.22,-0.72 1.25,1.25 0,0 0,-0.78 0.26,1.27 1.27,0 0,0 -0.76,-0.18c-1.36,0.14 -1.72,2.26 -1.76,4.19h0.51C15.84,20.54 16.31,19.21 17.1,19.13Z"
-      android:fillColor="#f58357"/>
-  <path
-      android:pathData="M24.3,22.79c0,-0.07 -0.06,-0.11 -0.14,-0.11l-1.36,-0.19H17.35c-3,0 -4.9,0 -5.42,0a0.14,0.14 0,0 0,-0.15 0.14c0,0.51 -0.15,2.54 -0.32,5.65 -0.18,3.29 -0.28,5.08 -0.31,5.56a0.15,0.15 0,0 0,0.12 0.14l5.4,0.82 5.33,0.82a0.21,0.21 0,0 0,0.12 0h0l2.64,-1.69a0.24,0.24 0,0 0,0.11 -0.21Z">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="19.718674"
-          android:startX="11.712537"
-          android:endY="32.546574"
-          android:endX="22.912838"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF00C0F3"/>
-        <item android:offset="1" android:color="#FF007DC5"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M18.87,31.61l-0.19,0l0,-0.07l0.44,0l0,0.07l-0.18,0l0,0.51l-0.07,0l0,-0.51z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M19.44,32.14l-0.15,-0.47l0,0.47l-0.07,0l0,-0.59l0.11,0l0.17,0.5l0.16,-0.5l0.1,0l0,0.59l-0.07,0l0,-0.47l-0.15,0.47l-0.1,0z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M15.81,25v6.3l1.41,0.46V26.49c0,-0.25 0.11,-0.42 0.29,-0.36s0.28,0.29 0.28,0.54v2.11c0.89,0.43 1.58,0 1.58,-1.14S19,26 17.76,25.55c-0.49,-0.14 -1.36,-0.42 -2,-0.53"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M17.49,30.86 L19.76,30c0.26,-0.1 0.29,-0.22 0.08,-0.29a1.49,1.49 0,0 0,-0.85 0l-1.51,0.54v-0.86l0.08,0a5.49,5.49 0,0 1,1.05 -0.22,4.56 4.56,0 0,1 2,0.24c0.67,0.21 0.75,0.53 0.57,0.75a1.76,1.76 0,0 1,-0.58 0.37l-3.09,1.12v-0.85Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M13.21,30.76c-0.68,-0.19 -0.8,-0.6 -0.49,-0.83a3.06,3.06 0,0 1,0.78 -0.37l2,-0.74v0.83l-1.46,0.54c-0.26,0.1 -0.29,0.22 -0.08,0.29a1.49,1.49 0,0 0,0.85 0l0.71,-0.25v0.74l-0.14,0a4.57,4.57 0,0 1,-2.19 -0.19"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M34.53,23.34H30.21a0,0 0,0 0,0 0V33.48a0,0 0,0 0,0 0H32a0,0 0,0 0,0 0v-9h2c0.73,0 1.13,0.74 1.13,2.07s-0.4,2.07 -1.13,2.07H32.8a0,0 0,0 0,0 0v1a0,0 0,0 0,0 0h1.73a2.21,2.21 0,0 0,1.64 -0.77,3.55 3.55,0 0,0 0.78,-2.41c0,-1.94 -0.95,-3.19 -2.42,-3.19"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M39.81,23.34H38.06a0,0 0,0 0,0 0V33.48a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V23.37a0,0 0,0 0,0 0"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M47.46,25.8a0,0 0,0 0,0 0H44.3c-2.8,0 -3.15,2.06 -3.15,3.86v1.56a2.1,2.1 0,0 0,2 2.32h1.7a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0H43.62c-0.28,0 -0.66,-0.13 -0.66,-1.09V29.63a5,5 0,0 1,0.33 -2.24,1 1,0 0,1 1,-0.51h1.35v6.59a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V25.8Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M60.06,27.58l-0.86,-0.07c-0.65,-0.06 -1.13,-0.41 -1.13,-1.48 0,-1.24 0.56,-1.58 1.3,-1.58h2.39a0,0 0,0 0,0 0V23.37a0,0 0,0 0,0 0H59.12a2.6,2.6 0,0 0,-2.79 2.87v0.08A2.51,2.51 0,0 0,58.64 29l0.86,0.06c0.65,0 1.06,0.63 1.06,1.52v0.25c0,0.56 -0.14,1.57 -1.33,1.57H56.75a0,0 0,0 0,0 0v1a0,0 0,0 0,0 0h3.08c0.95,0 2.54,-0.39 2.54,-3a3.43,3.43 0,0 0,-0.65 -2.2,2.23 2.23,0 0,0 -1.66,-0.76"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M74.42,25.8a0,0 0,0 0,0 0H71.26c-2.8,0 -3.16,2.06 -3.16,3.86v1.56a2.1,2.1 0,0 0,2 2.32h1.7a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0H70.58c-0.28,0 -0.66,-0.13 -0.66,-1.09V29.63a5,5 0,0 1,0.34 -2.24,1 1,0 0,1 1,-0.51h1.35v6.59a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M67.37,25.77H65.47V24.49a0,0 0,0 0,0 0H63.69a0,0 0,0 0,0 0V31.2a2.1,2.1 0,0 0,2 2.32H66.9a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0h-0.77c-0.2,0 -0.66,0 -0.66,-1V26.89h1.91a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M79.61,25.77H77.7V24.49a0,0 0,0 0,0 0H75.92a0,0 0,0 0,0 0V31.2a2.1,2.1 0,0 0,2 2.32h1.26a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0h-0.77c-0.2,0 -0.66,0 -0.66,-1V26.89h1.91a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M82.51,25.77H80.75a0,0 0,0 0,0 0v7.68a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V25.8a0,0 0,0 0,0 0"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M82.51,23.34H80.75a0,0 0,0 0,0 0v1.47a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V23.37a0,0 0,0 0,0 0"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M94.62,25.77H91.49a0,0 0,0 0,0 0v7.68a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V26.89h1.35a1.06,1.06 0,0 1,1 0.47A4.33,4.33 0,0 1,96 29.43s0,4.05 0,4.05a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V29.63c0,-1.8 -0.36,-3.86 -3.15,-3.86"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M88.11,31.9a1.46,1.46 0,0 1,-2.22 0,4.62 4.62,0 0,1 -0.37,-2.25h0c0,-1.33 0.16,-2.09 0.53,-2.45a1.64,1.64 0,0 1,1.9 0c0.37,0.36 0.53,1.12 0.53,2.46a4.59,4.59 0,0 1,-0.37 2.25M87,25.77c-2.93,0 -3.3,2.07 -3.3,3.87s0.38,3.87 3.3,3.87 3.3,-2.07 3.3,-3.87 -0.37,-3.87 -3.3,-3.87"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M48.44,25.77a0,0 0,0 0,0 0L51,33.41a0.1,0.1 0,0 1,0 0.06l-1.46,3.77a0,0 0,0 0,0 0H51.1a0.05,0.05 0,0 0,0 0L55.71,25.8a0,0 0,0 0,0 0H54a0.05,0.05 0,0 0,0 0L52,30.8s0,0 0,0l-1.7,-5a0,0 0,0 0,0 0Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M98.98,32.3l-0.45,0l0,-0.15l1.08,0l0,0.15l-0.45,0l0,1.22l-0.18,0l0,-1.22z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M100.33,33.51l-0.37,-1.1l0,1.1l-0.18,0l0,-1.36l0.25,0l0.39,1.16l0.4,-1.16l0.24,0l0,1.36l-0.17,0l0,-1.1l-0.38,1.1l-0.18,0z"
-      android:fillColor="#fff"/>
+    android:viewportHeight="58">
+    <path
+        android:fillColor="#002"
+        android:pathData="M7,1L105,1A6,6 0,0 1,111 7L111,50A6,6 0,0 1,105 56L7,56A6,6 0,0 1,1 50L1,7A6,6 0,0 1,7 1z" />
+    <path
+        android:fillColor="#f58357"
+        android:pathData="M17.1,19.13a0.57,0.57 0,0 1,0.33 0.06,7.45 7.45,0 0,0 -0.89,3.63h0.51a6.82,6.82 0,0 1,0.79 -3.33,6.77 6.77,0 0,1 1.25,3.33h0.51a7.33,7.33 0,0 0,-1.39 -3.68,0.82 0.82,0 0,1 0.36,-0.1 0.88,0.88 0,0 1,0.67 0.35,7.23 7.23,0 0,1 1.15,3.43h0.51a8,8 0,0 0,-1.12 -3.56,1.53 1.53,0 0,0 -1.22,-0.72 1.25,1.25 0,0 0,-0.78 0.26,1.27 1.27,0 0,0 -0.76,-0.18c-1.36,0.14 -1.72,2.26 -1.76,4.19h0.51C15.84,20.54 16.31,19.21 17.1,19.13Z" />
+    <path android:pathData="M24.3,22.79c0,-0.07 -0.06,-0.11 -0.14,-0.11l-1.36,-0.19H17.35c-3,0 -4.9,0 -5.42,0a0.14,0.14 0,0 0,-0.15 0.14c0,0.51 -0.15,2.54 -0.32,5.65 -0.18,3.29 -0.28,5.08 -0.31,5.56a0.15,0.15 0,0 0,0.12 0.14l5.4,0.82 5.33,0.82a0.21,0.21 0,0 0,0.12 0h0l2.64,-1.69a0.24,0.24 0,0 0,0.11 -0.21Z"></path>
+    <path
+        android:fillColor="#fff"
+        android:pathData="M18.87,31.61l-0.19,0l0,-0.07l0.44,0l0,0.07l-0.18,0l0,0.51l-0.07,0l0,-0.51z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M19.44,32.14l-0.15,-0.47l0,0.47l-0.07,0l0,-0.59l0.11,0l0.17,0.5l0.16,-0.5l0.1,0l0,0.59l-0.07,0l0,-0.47l-0.15,0.47l-0.1,0z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M15.81,25v6.3l1.41,0.46V26.49c0,-0.25 0.11,-0.42 0.29,-0.36s0.28,0.29 0.28,0.54v2.11c0.89,0.43 1.58,0 1.58,-1.14S19,26 17.76,25.55c-0.49,-0.14 -1.36,-0.42 -2,-0.53" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M17.49,30.86 L19.76,30c0.26,-0.1 0.29,-0.22 0.08,-0.29a1.49,1.49 0,0 0,-0.85 0l-1.51,0.54v-0.86l0.08,0a5.49,5.49 0,0 1,1.05 -0.22,4.56 4.56,0 0,1 2,0.24c0.67,0.21 0.75,0.53 0.57,0.75a1.76,1.76 0,0 1,-0.58 0.37l-3.09,1.12v-0.85Z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M13.21,30.76c-0.68,-0.19 -0.8,-0.6 -0.49,-0.83a3.06,3.06 0,0 1,0.78 -0.37l2,-0.74v0.83l-1.46,0.54c-0.26,0.1 -0.29,0.22 -0.08,0.29a1.49,1.49 0,0 0,0.85 0l0.71,-0.25v0.74l-0.14,0a4.57,4.57 0,0 1,-2.19 -0.19" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M34.53,23.34H30.21a0,0 0,0 0,0 0V33.48a0,0 0,0 0,0 0H32a0,0 0,0 0,0 0v-9h2c0.73,0 1.13,0.74 1.13,2.07s-0.4,2.07 -1.13,2.07H32.8a0,0 0,0 0,0 0v1a0,0 0,0 0,0 0h1.73a2.21,2.21 0,0 0,1.64 -0.77,3.55 3.55,0 0,0 0.78,-2.41c0,-1.94 -0.95,-3.19 -2.42,-3.19" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M39.81,23.34H38.06a0,0 0,0 0,0 0V33.48a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V23.37a0,0 0,0 0,0 0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M47.46,25.8a0,0 0,0 0,0 0H44.3c-2.8,0 -3.15,2.06 -3.15,3.86v1.56a2.1,2.1 0,0 0,2 2.32h1.7a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0H43.62c-0.28,0 -0.66,-0.13 -0.66,-1.09V29.63a5,5 0,0 1,0.33 -2.24,1 1,0 0,1 1,-0.51h1.35v6.59a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V25.8Z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M60.06,27.58l-0.86,-0.07c-0.65,-0.06 -1.13,-0.41 -1.13,-1.48 0,-1.24 0.56,-1.58 1.3,-1.58h2.39a0,0 0,0 0,0 0V23.37a0,0 0,0 0,0 0H59.12a2.6,2.6 0,0 0,-2.79 2.87v0.08A2.51,2.51 0,0 0,58.64 29l0.86,0.06c0.65,0 1.06,0.63 1.06,1.52v0.25c0,0.56 -0.14,1.57 -1.33,1.57H56.75a0,0 0,0 0,0 0v1a0,0 0,0 0,0 0h3.08c0.95,0 2.54,-0.39 2.54,-3a3.43,3.43 0,0 0,-0.65 -2.2,2.23 2.23,0 0,0 -1.66,-0.76" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M74.42,25.8a0,0 0,0 0,0 0H71.26c-2.8,0 -3.16,2.06 -3.16,3.86v1.56a2.1,2.1 0,0 0,2 2.32h1.7a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0H70.58c-0.28,0 -0.66,-0.13 -0.66,-1.09V29.63a5,5 0,0 1,0.34 -2.24,1 1,0 0,1 1,-0.51h1.35v6.59a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0Z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M67.37,25.77H65.47V24.49a0,0 0,0 0,0 0H63.69a0,0 0,0 0,0 0V31.2a2.1,2.1 0,0 0,2 2.32H66.9a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0h-0.77c-0.2,0 -0.66,0 -0.66,-1V26.89h1.91a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M79.61,25.77H77.7V24.49a0,0 0,0 0,0 0H75.92a0,0 0,0 0,0 0V31.2a2.1,2.1 0,0 0,2 2.32h1.26a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0h-0.77c-0.2,0 -0.66,0 -0.66,-1V26.89h1.91a0,0 0,0 0,0 0v-1a0,0 0,0 0,0 0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M82.51,25.77H80.75a0,0 0,0 0,0 0v7.68a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V25.8a0,0 0,0 0,0 0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M82.51,23.34H80.75a0,0 0,0 0,0 0v1.47a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V23.37a0,0 0,0 0,0 0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M94.62,25.77H91.49a0,0 0,0 0,0 0v7.68a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V26.89h1.35a1.06,1.06 0,0 1,1 0.47A4.33,4.33 0,0 1,96 29.43s0,4.05 0,4.05a0,0 0,0 0,0 0h1.75a0,0 0,0 0,0 0V29.63c0,-1.8 -0.36,-3.86 -3.15,-3.86" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M88.11,31.9a1.46,1.46 0,0 1,-2.22 0,4.62 4.62,0 0,1 -0.37,-2.25h0c0,-1.33 0.16,-2.09 0.53,-2.45a1.64,1.64 0,0 1,1.9 0c0.37,0.36 0.53,1.12 0.53,2.46a4.59,4.59 0,0 1,-0.37 2.25M87,25.77c-2.93,0 -3.3,2.07 -3.3,3.87s0.38,3.87 3.3,3.87 3.3,-2.07 3.3,-3.87 -0.37,-3.87 -3.3,-3.87" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M48.44,25.77a0,0 0,0 0,0 0L51,33.41a0.1,0.1 0,0 1,0 0.06l-1.46,3.77a0,0 0,0 0,0 0H51.1a0.05,0.05 0,0 0,0 0L55.71,25.8a0,0 0,0 0,0 0H54a0.05,0.05 0,0 0,0 0L52,30.8s0,0 0,0l-1.7,-5a0,0 0,0 0,0 0Z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M98.98,32.3l-0.45,0l0,-0.15l1.08,0l0,0.15l-0.45,0l0,1.22l-0.18,0l0,-1.22z" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M100.33,33.51l-0.37,-1.1l0,1.1l-0.18,0l0,-1.36l0.25,0l0.39,1.16l0.4,-1.16l0.24,0l0,1.36l-0.17,0l0,-1.1l-0.38,1.1l-0.18,0z" />
 </vector>
