fix erros de null em stream.
fix link para loja

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,5 +7,6 @@
         <attr name="label_stream" format="string" />
         <attr name="label_rent" format="string" />
         <attr name="label_bay" format="string" />
+        <attr name="movie_name" format="string" />
     </declare-styleable>
 </resources>
