--- a/app/src/main/res/layout/page_scroll_image_top.xml
+++ b/app/src/main/res/layout/page_scroll_image_top.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_scroll_image_top"
+    android:background="@color/blue_main"
     android:layout_width="match_parent"
+    android:importantForAccessibility="yes"
+    android:focusable="true"
     android:layout_height="@dimen/trade_size_dp_202">
 
     <ImageView
         android:id="@+id/img_top_scroll"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/trade_size_dp_202"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/foto_principal"
+        android:importantForAccessibility="no"
+        android:focusable="false"
         android:scaleType="centerCrop"
+        tools:src="@drawable/empty_popcorn"
         app:layout_collapseMode="parallax"
-        app:layout_collapseParallaxMultiplier="1.0" />
-
-    <TextView
-        android:id="@+id/destaque"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="@dimen/trade_size_dp_40"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/trade_txt_size_sp_16"
-        android:textStyle="normal|bold|italic"
-        android:typeface="monospace"
-        android:visibility="gone" />
+        app:layout_collapseParallaxMultiplier="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title"
@@ -36,9 +31,15 @@
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="@dimen/trade_size_dp_20"
         android:textColor="@color/white"
-        android:textSize="@dimen/trade_txt_size_sp_16"
-        android:textStyle="normal|bold"
-        android:typeface="serif" />
+        android:gravity="center"
+        android:textSize="@dimen/trade_txt_size_sp_14"
+        android:textStyle="bold"
+        android:importantForAccessibility="yes"
+        android:focusable="false"
+        tools:text="dadada"
+        android:typeface="serif"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
