--- a/app/src/main/res/layout/scroll_trailer.xml
+++ b/app/src/main/res/layout/scroll_trailer.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scroll_treiler_linearlayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/trade_size_dp_2">
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="@dimen/trade_size_dp_8">
 
-    <com.google.android.youtube.player.YouTubeThumbnailView
-        android:id="@+id/youtube_view_thumbnail"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/scroll_treiler_linearlayout"
+        android:background="@drawable/background_trailer_item"
         android:layout_width="@dimen/trade_size_dp_190"
         android:layout_height="@dimen/trade_size_dp_150"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/empty_produtora2" />
+        android:orientation="vertical"
+        android:padding="@dimen/trade_size_dp_2">
 
-    <ImageView
-        android:id="@+id/play_treiler_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="25dp"
-        android:contentDescription="@string/play_trailer"
-        android:scaleType="centerCrop"
-        android:src="@drawable/play"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        <com.google.android.youtube.player.YouTubeThumbnailView
+            android:id="@+id/youtube_view_thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/empty_produtora2" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/play_treiler_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="25dp"
+            android:contentDescription="@string/play_trailer"
+            android:scaleType="centerCrop"
+            android:src="@drawable/play"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
