--- a/app/src/main/res/layout/activity_person_perfil.xml
+++ b/app/src/main/res/layout/activity_person_perfil.xml
@@ -1,159 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:padding="@dimen/trade_size_dp_6">
 
-        <LinearLayout
-            android:id="@+id/linear_person"
+        <TextView
+            android:id="@+id/person_biogragia"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:padding="@dimen/trade_size_dp_10"
+            android:importantForAccessibility="yes"
+            android:focusable="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/info_date"
+            tools:text="a vida do fulano" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/info_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:importantForAccessibility="yes"
+            android:focusable="true"
+            app:layout_constraintBottom_toTopOf="@id/person_biogragia"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/nome_person"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
-                        android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:textSize="@dimen/trade_txt_size_sp_20"
-                        android:textStyle="normal|bold" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/conhecido"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="top"
-                            android:layout_marginLeft="@dimen/trade_size_dp_2"
-                            android:layout_marginStart="@dimen/trade_size_dp_2"
-                            android:text="@string/apelido"
-                            android:visibility="gone" />
-
-
-                        <TextView
-                            android:id="@+id/aka"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="top"
-                            android:layout_marginLeft="@dimen/trade_size_dp_2"
-                            android:layout_marginStart="@dimen/trade_size_dp_2"
-                            android:visibility="gone" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/birthday"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="top"
-                            android:layout_marginLeft="@dimen/trade_size_dp_2"
-                            android:layout_marginStart="@dimen/trade_size_dp_2"
-                            android:visibility="gone" />
-
-                        <TextView
-                            android:id="@+id/dead"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="top"
-                            android:layout_marginLeft="@dimen/trade_size_dp_2"
-                            android:layout_marginStart="@dimen/trade_size_dp_2"
-                            android:visibility="gone" />
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/place_of_birth"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="top"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
-                        android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/image_person"
-                    android:layout_width="@dimen/trade_size_dp_85"
-                    android:layout_height="@dimen/trade_size_dp_110"
-                    android:layout_gravity="center_vertical|center_horizontal|center"
-                    android:layout_margin="@dimen/trade_size_dp_2"
-                    android:src="@drawable/person"
-                    android:visibility="invisible" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/person_biogragia"
+            <ImageView
+                android:id="@+id/image_person"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/trade_size_dp_3"
-                android:layout_marginLeft="@dimen/trade_size_dp_3"
-                android:layout_marginRight="@dimen/trade_size_dp_3"
-                android:layout_marginStart="@dimen/trade_size_dp_3"
-                android:layout_marginTop="@dimen/trade_size_dp_5" />
+                android:layout_margin="@dimen/trade_size_dp_2"
+                android:src="@drawable/person"
+                android:focusable="false"
+                android:importantForAccessibility="no"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/conhecido"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginStart="@dimen/trade_size_dp_2"
+                android:text="@string/apelido"
+                android:focusable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nome_person" />
 
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:id="@+id/person_homepage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autoLink="web"
-                    android:text="@string/homepage"
-                    android:textStyle="normal|italic"
-                    tools:visibility="visible"
-                    android:visibility="invisible" />
+            <TextView
+                android:id="@+id/aka"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:layout_marginStart="@dimen/trade_size_dp_8"
+                android:focusable="false"
+                app:layout_constraintStart_toEndOf="@id/conhecido"
+                app:layout_constraintTop_toTopOf="@id/conhecido"
+                app:layout_constraintEnd_toStartOf="@id/image_person"
+                tools:text="nike" />
 
-                <ImageView
-                    android:id="@+id/person_wiki"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/trade_size_dp_40"
-                    android:layout_gravity="end|center"
-                    android:layout_weight="1"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/wikipedia"
-                    android:visibility="invisible" />
+            <TextView
+                android:id="@+id/birthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_marginStart="@dimen/trade_size_dp_2"
+                android:focusable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/aka"
+                tools:text="01*01*2011" />
 
+            <TextView
+                android:id="@+id/dead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_marginStart="@dimen/trade_size_dp_8"
+                android:focusable="false"
+                app:layout_constraintStart_toEndOf="@id/birthday"
+                app:layout_constraintTop_toTopOf="@id/birthday"
+                tools:text="01/01/0121" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/nome_person"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/trade_size_dp_2"
+                android:textSize="@dimen/trade_txt_size_sp_20"
+                android:textStyle="normal|bold"
+                android:focusable="false"
+                app:layout_constraintEnd_toStartOf="@+id/image_person"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/place_of_birth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_marginStart="@dimen/trade_size_dp_2"
+                android:focusable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/birthday"
+                tools:text="na quebrada" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <include layout="@layout/include_progress" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/person_homepage"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:autoLink="web"
+            android:ellipsize="end"
+            android:focusable="true"
+            android:importantForAccessibility="yes"
+            android:maxLines="1"
+            android:text="@string/homepage"
+            android:textStyle="normal|italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/person_biogragia"
+            tools:visibility="visible" />
 
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
