--- a/app/src/main/res/layout/person_midias_filmes_layout.xml
+++ b/app/src/main/res/layout/person_midias_filmes_layout.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:minHeight="190dp"
-    android:minWidth="135dp"
-    app:cardElevation="@dimen/trade_size_dp_3">
+    app:cardUseCompatPadding="true"
+    app:contentPadding="@dimen/trade_size_dp_3">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:minHeight="@dimen/trade_size_dp_100">
+        android:layout_gravity="center">
 
         <ImageView
             android:id="@+id/img_poster_grid"
@@ -21,16 +19,22 @@
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:cropToPadding="false"
-            android:elevation="0dp"
             android:padding="2dp"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:src="@drawable/person"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/progress_poster_grid"
             style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/text_title_crew"
@@ -41,8 +45,11 @@
             android:background="@android:drawable/screen_background_dark_transparent"
             android:gravity="center"
             android:textColor="@color/white"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
