--- a/app/src/main/res/layout/poster_movie_details_layout.xml
+++ b/app/src/main/res/layout/poster_movie_details_layout.xml
@@ -5,6 +5,8 @@
     android:id="@+id/card_poster"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:importantForAccessibility="no"
+    android:focusable="false"
     app:cardCornerRadius="@dimen/trade_size_dp_3"
     app:cardElevation="3dp"
     app:cardPreventCornerOverlap="true"
@@ -20,6 +22,8 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:contentDescription="@string/poster_filme"
+        android:importantForAccessibility="no"
+        android:focusable="false"
         android:cropToPadding="true"
         android:scaleType="fitCenter"
         android:transitionName="poster"
