--- a/app/src/main/res/layout/scroll_elenco.xml
+++ b/app/src/main/res/layout/scroll_elenco.xml
@@ -1,76 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scroll_elenco_linearlayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:focusable="true"
     android:importantForAccessibility="yes"
-    android:orientation="vertical"
-    android:padding="@dimen/trade_size_dp_2">
+    app:cardUseCompatPadding="true"
+    app:contentPadding="@dimen/trade_size_dp_3">
 
-    <ImageView
-        android:id="@+id/imgPager"
-        android:layout_width="@dimen/trade_size_dp_100"
-        android:layout_height="@dimen/trade_size_dp_140"
-        android:adjustViewBounds="false"
-        android:focusable="false"
-        android:foregroundGravity="center_vertical"
-        android:importantForAccessibility="no"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textCastNomes"
-        tools:src="@drawable/person" />
-
-
-    <ProgressBar
-        android:id="@+id/progressBarCast"
-        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/scroll_elenco_linearlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:focusable="false"
         android:importantForAccessibility="no"
-        android:indeterminate="false"
-        app:layout_constraintBottom_toTopOf="@id/textCastPersonagem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textCastNomes" />
-
-    <TextView
-        android:id="@+id/textCastNomes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:ellipsize="end"
         android:focusable="false"
-        android:gravity="bottom|center_horizontal"
-        android:importantForAccessibility="yes"
-        android:maxLength="14"
-        android:maxLines="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Nome do cara" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgPager"
+            android:layout_width="@dimen/trade_size_dp_100"
+            android:layout_height="@dimen/trade_size_dp_140"
+            android:adjustViewBounds="false"
+            android:focusable="false"
+            android:foregroundGravity="center_vertical"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textCastNomes"
+            tools:src="@drawable/person" />
 
 
-    <TextView
-        android:id="@+id/textCastPersonagem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:ellipsize="end"
-        android:focusable="false"
-        android:gravity="top|center_horizontal"
-        android:importantForAccessibility="yes"
-        android:maxLength="14"
-        android:maxLines="2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgPager"
-        tools:text="Nome do personagem do cara" />
+        <ProgressBar
+            android:id="@+id/progressBarCast"
+            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:focusable="false"
+            android:importantForAccessibility="no"
+            android:indeterminate="false"
+            app:layout_constraintBottom_toTopOf="@id/textCastPersonagem"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textCastNomes" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/textCastNomes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ellipsize="end"
+            android:focusable="false"
+            android:gravity="bottom|center_horizontal"
+            android:importantForAccessibility="yes"
+            android:maxLength="14"
+            android:maxLines="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Nome do cara" />
+
+
+        <TextView
+            android:id="@+id/textCastPersonagem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ellipsize="end"
+            android:focusable="false"
+            android:gravity="top|center_horizontal"
+            android:importantForAccessibility="yes"
+            android:maxLength="14"
+            android:maxLines="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgPager"
+            tools:text="Nome do personagem do cara" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
