--- a/app/src/main/res/layout/bottom_streaming_tv.xml
+++ b/app/src/main/res/layout/bottom_streaming_tv.xml
@@ -23,6 +23,7 @@
         tools:visibility="visible" />
 
     <TextView
+        android:id="@+id/beta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -32,6 +33,16 @@
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SmallSp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Veja mais nos detalhes da temprorada"
+        android:textColor="@color/black_transparente_produtora"
+        android:textSize="8sp"
+        app:layout_constraintStart_toStartOf="@id/beta"
+        app:layout_constraintTop_toBottomOf="@id/beta"
         tools:ignore="SmallSp" />
 
     <TextView
@@ -58,59 +69,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/open_bar"
-        tools:text="@string/stream_avaliable_movie" />
+        tools:text="@string/stream_avaliable_tv" />
 
     <TextView
         android:id="@+id/label_stream"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent2"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:text="@string/stream"
+        android:text="@string/main_stream_tv"
         android:textColor="@color/black"
         android:textSize="@dimen/trade_txt_size_sp_16"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@+id/label_rent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_streaming"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/label_rent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent2"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="@string/rent"
-        android:textColor="@color/black"
-        android:textSize="@dimen/trade_txt_size_sp_16"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@+id/label_bay"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/label_stream"
-        app:layout_constraintTop_toBottomOf="@+id/title_streaming"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/label_bay"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent2"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="@string/purchase"
-        android:textColor="@color/black"
-        android:textSize="@dimen/trade_txt_size_sp_16"
-        android:textStyle="bold"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/label_rent"
         app:layout_constraintTop_toBottomOf="@+id/title_streaming"
         tools:visibility="visible" />
 
@@ -125,21 +99,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_types_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="label_bay, label_rent, label_stream" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_recycler_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="rcStream, rcRent, rcBay" />
-
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcStream"
+        android:id="@+id/tvRc"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -148,31 +109,5 @@
         app:layout_constraintTop_toBottomOf="@id/label_stream"
         tools:itemCount="16"
         tools:listitem="@layout/sources_item_layout" />
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcRent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/label_rent"
-        app:layout_constraintStart_toStartOf="@id/label_rent"
-        app:layout_constraintTop_toBottomOf="@id/label_rent"
-        tools:itemCount="16"
-        tools:listitem="@layout/sources_item_layout" />
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcBay"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/label_bay"
-        app:layout_constraintStart_toStartOf="@id/label_bay"
-        app:layout_constraintTop_toBottomOf="@id/label_bay"
-        app:layout_constraintVertical_bias="0.0"
-        tools:itemCount="17"
-        tools:listitem="@layout/sources_item_layout" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
