--- a/app/src/main/res/layout/sources_item_layout.xml
+++ b/app/src/main/res/layout/sources_item_layout.xml
@@ -38,8 +38,9 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon_source"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:scaleType="centerCrop"
+        android:layout_marginTop="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
