--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="StreamView">
+    <declare-styleable name="StreamViewMovie">
         <attr name="error" format="boolean" />
         <attr name="errorImg" format="reference" />
         <attr name="title_streaming" format="string" />
@@ -8,5 +8,10 @@
         <attr name="label_rent" format="string" />
         <attr name="label_bay" format="string" />
         <attr name="movie_name" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="StreamViewTv">
+        <attr name="error_tv" format="boolean" />
+        <attr name="errorImg_tv" format="reference" />
     </declare-styleable>
 </resources>
